--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ deploy: {
      "master",
      ],
   },
-  access_key_id: 
+  access_key_id: {
     secure: "$AWS_ACCESS_KEY",
-  secret_access_key: 
+  },
+  secret_access_key: {
     secure: "$AWS_SECRET_KEY",  
+  },
 }  
