--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ script:
 
 deploy: {
   provider: "elasticbeanstalk",
-  region: "us-east-1",
-  app: "docker-react-test",
-  env: "Dockerreacttest-env",
-  bucket: "elasticbeanstalk-us-east-1-186018379257",
-  bucket_path: "docker-react-test",
+  region: "eu-central-1",
+  app: "docker-rc",
+  env: "Dockerrc-env",
+  bucket: "elasticbeanstalk-eu-central-1-186018379257",
+  bucket_path: "docker-rc-test",
   on: {
     branch: [
      "master",
