--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - docker build -t skiffua/docker-react -f Dockerfile.dev .
 
 script:
-  - docker exec -e CI=true skiffua/docker-react npm run test -- --coverage
+  #- docker run -e CI=true skiffua/docker-react npm run test -- --coverage
 
 deploy: {
   provider: "elasticbeanstalk",
