--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: generic
 
+sudo: required
+
 deploy: {
   provider: "elasticbeanstalk",
   region: "eu-central-1",
   app: "docker-rc",
   env: "Dockerrc-env",
-  bucket: "elasticbeanstalk-eu-central-1-186018379257",
+  bucket_name: "elasticbeanstalk-eu-central-1-186018379257",
   bucket_path: "docker-rc-test",
   on: {
     branch: [
