--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy: {
   provider: "elasticbeanstalk",
   region: "eu-central-1",
   app: "docker-rc",
-  env: "Dockerrc-env",
+  env: "Dockerrc-env-1",
   bucket_name: "elasticbeanstalk-eu-central-1-186018379257",
   bucket_path: "docker-rc",
   on: {
